done with projects section

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,20 @@
 }
  */
 
+ *{
+   box-sizing: border-box;
+  }
+  
+  html,body{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+
+  overflow-x: hidden;
+
+
+}  
+
  @import "tailwindcss";
 
  @font-face {
