added core section to team

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
  *{
    box-sizing: border-box;
   }
-  
+
   html,body{
   margin: 0;
   padding: 0;
@@ -25,18 +25,51 @@
 
   overflow-x: hidden;
 
-
 }  
 
- @import "tailwindcss";
+ @import "tailwindcss";  
+
+
+ /* ---break---
+ */  
+
+ @custom-variant dark (&:is(.dark *));
 
  @font-face {
   font-family: 'yatra-one';
   src: url('./assets/YatraOne-Regular.ttf');
 }
 
-
 @theme{
   --font-yatra: 'yatra-one';
 
+
 }
+
+@theme inline{
+  --animate-marquee: marquee var(--duration) infinite linear;
+  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+
+  @keyframes marquee {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  @keyframes marquee-vertical {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
+}
+
+/* ---break---
+ */
+
+
+  
