--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ html,body{
  /* ---break---
  */  
 
+ /* @custom-variant dark (&:is(.dark *));   */
+
+ /* ---break---
+ */  
+
  /* @custom-variant dark (&:is(.dark *)); */
 
  @font-face {
@@ -43,7 +48,6 @@ html,body{
 @theme{
   --font-yatra: 'yatra-one';
 
-
 }
  @font-face {
   font-family: 'satoshi';
@@ -52,7 +56,6 @@ html,body{
 
 @theme{
   --font-satoshi: 'satoshi';
-
 
 }
  @font-face {
@@ -63,7 +66,6 @@ html,body{
 @theme{
   --font-seriguel: 'seriguel';
 
-
 }
  @font-face {
   font-family: 'poppins';
@@ -72,7 +74,6 @@ html,body{
 
 @theme{
   --font-poppins: 'poppins';
-
 
 }
 
@@ -96,10 +97,28 @@ html,body{
       transform: translateY(calc(-100% - var(--gap)));
     }
   }
-}
+  --animate-orbit: orbit calc(var(--duration)*1s) linear infinite
+;
+  @keyframes orbit {
+  0% {
+    transform: rotate(calc(var(--angle) * 1deg)) translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
+      }
+  100% {
+    transform: rotate(calc(var(--angle) * 1deg + 360deg)) translateY(calc(var(--radius) * 1px)) rotate(calc((var(--angle) * -1deg) - 360deg));
+      }
+   }}
 
 /* ---break---
  */
 
+/* ---break---
+ */
 
-  
+/* @layer base {
+  * {
+    @apply border-border outline-ring/50;
+   }
+  body {
+    @apply bg-background text-foreground;
+   }
+} */
