done till events page

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,24 @@ html,body{
   100% {
     transform: rotate(calc(var(--angle) * 1deg + 360deg)) translateY(calc(var(--radius) * 1px)) rotate(calc((var(--angle) * -1deg) - 360deg));
       }
-   }}
+   }
+  
+      --animate-aurora: aurora 60s linear infinite;
+  @keyframes aurora {
+    from {
+      background-position:
+        50% 50%,
+        50% 50%;
+    }
+    to {
+      background-position:
+        350% 50%,
+        350% 50%;
+    }
+  }
+  
+  }
+
 
 /* ---break---
  */
